bug squashing and code cleaning

--- a/client/css/core.css
+++ b/client/css/core.css
@@ -141,18 +141,17 @@ h1 {
   padding: 20px 0px;
 }
 
-
 .question-form-button {
   font-size: 16px;
-  width: 250px;
   color: #fff;
   padding: 8px 12px;
   text-align: center;
   background-color: #25b79a;
   border: none;
   border-radius: 3px;
-  margin: 0px auto;
+  margin: 25px auto;
   outline: none;
+  width: 19em;
 }
 
 .valid:hover {
@@ -165,7 +164,7 @@ h1 {
 
 .question {
 	width: 100%;
-	height: 40px;
+	height: 50px;
 }
 
 .question-option {
@@ -275,7 +274,7 @@ h1 {
 .gender-buttons li {
   float: left;
   margin: 0px;
-  width: 123px;
+  width: 49%;
   height: 30px;
   position: relative;
   border: 1px solid #e0e0e0;
@@ -397,18 +396,6 @@ input[type="submit"]{
   box-shadow:  rgba(225, 229, 225, 0.7) 1px 1px 5px;
 }
 
-.question-form-button {
-  font-size: 16px;
-  color: #fff;
-  padding: 8px 12px;
-  text-align: center;
-  background-color: #25b79a;
-  border: none;
-  border-radius: 3px;
-  margin: 0px auto;
-  outline: none;
-  width: 19em;
-}
 
 
 
@@ -476,7 +463,7 @@ input[type="submit"]{
 .match-box-hover {
   border-radius: 50%;
   height: auto;
-  padding-top: 7.5%;
+  padding-top: 2.5%;
   padding-bottom: 7.5%;
   font-size: 2vw;
   font-weight: 800;
@@ -495,6 +482,11 @@ input[type="submit"]{
   color: #fff;
 }
 
+.match-box-name {
+  font-size: 1.2vw;
+  padding-top: 12%;
+  padding-bottom: 7%;
+}
 
 
 
